# HaskellTypist

./: ChangeLog.md  HaskellTypist.cabal  README.md  haskell-typist.cabal  stack.yaml
src/: Interface.hs  Main.hs  Passage.hs  Session.hs  Themes.hs  TypistData.hs
src/Data/: Focus.hs
src/Interface/: Combined.hs  InterfacePassage.hs  InterfaceSession.hs  Passage.hs  Session.hs
