name:                HaskellTypist
version:             0.1.0.0
synopsis:            A variant of GNU Typist written in Haskell
-- description:
homepage:            https://github.com/wintertideheir/HaskellTypist
license:             AGPL-3
license-file:        LICENSE
author:              Autumn Ara
maintainer:          notespowder@gmail.com
copyright:           (c) Autumn Ara 2020
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable HaskellTypist
  main-is:             Main.hs
  other-modules:       Session
  ghc-options:         -threaded
  build-depends:       base,
                       brick,
                       vty,
                       extra,
                       time,
                       HCodecs
  hs-source-dirs:      src
  default-language:    Haskell2010
