name:                haskell-typist
version:             0.1.0.0
synopsis:            A variant of GNU Typist written in Haskell
-- description:
homepage:            https://github.com/wintertideheir/haskell-typist
license:             AGPL-3
license-file:        LICENSE
author:              Autumn Ara
maintainer:          notespowder@gmail.com
copyright:           (c) Autumn Ara 2020
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable haskell-typist
  main-is:             Main.hs
  other-modules:       Passage,
                       Interface,
                       Interface.Session,
                       Interface.Passage,
                       Themes
  ghc-options:         -threaded -Wall
                       -F -pgmF=record-dot-preprocessor
  build-depends:       base,
                       flat,
                       brick,
                       vty,
                       extra,
                       time,
                       filepath,
                       record-hasfield,
                       record-dot-preprocessor
  hs-source-dirs:      src
  default-language:    Haskell2010
